kyverno/baseline/block-privileged-containers/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-alpha
  labels:
    arxen.io/managed: "true"
    arxen.io/tenant-id: "11111111-1111-1111-1111-111111111111"
    arxen.io/compliance-tier: "soc2"
    arxen.io/environment: "dev"
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged-true
  namespace: team-alpha
spec:
  containers:
    - name: app
      image: nginx:1.25.3
      securityContext:
        privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged-false
  namespace: team-alpha
spec:
  containers:
    - name: app
      image: nginx:1.25.3
      securityContext:
        privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-no-privilege-field
  namespace: team-alpha
spec:
  containers:
    - name: app
      image: nginx:1.25.3
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged-initcontainer
  namespace: team-alpha
spec:
  initContainers:
    - name: setup
      image: nginx:1.25.3
      securityContext:
        privileged: true
  containers:
    - name: app
      image: nginx:1.25.3
      securityContext:
        privileged: false
